--- a/baetyl-remote-object/example/test/baetyl/service.yml
+++ b/baetyl-remote-object/example/test/baetyl/service.yml
@@ -1,31 +1,18 @@
-var/lib:
+hub:
   address: tcp://127.0.0.1:1883
   username: test
   password: hahaha
 clients:
   - name: baidu-bos
-    region: us-east-2
-    ak: XXXXXXXXXXXXXXXXXXXXXXXX
-    sk: XXXXXXXXXXXXXXXXXXXXXXXX
-    kind: S3
-    multipart:
-      partsize: 10m
-      concurrency: 10
-    pool:
-      worker: 1000
-      idletime: 30s
-    bucket: bos-remote-demo
-    temppath: var/lib/baetyl/tmp
-    # max 1000g
+    kind: BOS
     limit:
       enable: true
-      data: 9g
+      data: 10a
       path: var/lib/baetyl/data/stats.yml
 rules:
   - hub:
       clientid: remote-write-bos
       subscriptions:
-        # hub topic
         - topic: t
     client:
       name: baidu-bos
