--- a/baetyl-remote-object/example/test/baetyl/service.yml
+++ b/baetyl-remote-object/example/test/baetyl/service.yml
@@ -1,17 +1,16 @@
-hub:
+mqtt:
   address: tcp://127.0.0.1:1883
   username: test
   password: hahaha
 clients:
   - name: baidu-bos
-    kind: BOS
     limit:
       enable: true
       data: 10a
       path: var/lib/baetyl/data/stats.yml
 rules:
   - hub:
-      clientid: remote-write-bos
+      clientid: remote-bos
       subscriptions:
         - topic: t
     client:
