--- a/baetyl-remote-object/example/etc/baetyl/service-bos.yml
+++ b/baetyl-remote-object/example/etc/baetyl/service-bos.yml
@@ -1,10 +1,10 @@
-hub:
+mqtt:
   address: tcp://127.0.0.1:1883
   username: test
   password: hahaha
 clients:
   - name: baidu-bos
-    address: bj.bcebos.com
+    endpoint: XX.bcebos.com
     ak: XXXXXXXXXXXXXXXXXXXXXXXXXX
     sk: XXXXXXXXXXXXXXXXXXXXXXXXXX
     kind: BOS
@@ -14,18 +14,16 @@ clients:
     pool:
       worker: 1000
       idletime: 30s
-    bucket: bos-remote-demo
+    bucket: baidu-bos-demo
     temppath: var/lib/baetyl/tmp
-    # max 1000g
     limit:
       enable: true
       data: 9g
       path: var/lib/baetyl/data/stats.yml
 rules:
   - hub:
-      clientid: remote-write-bos
+      clientid: remote-bos
       subscriptions:
-        # hub topic
         - topic: t
     client:
       name: baidu-bos
