--- a/baetyl-remote-object/example/etc/baetyl/service-s3.yml
+++ b/baetyl-remote-object/example/etc/baetyl/service-s3.yml
@@ -1,9 +1,9 @@
-var/lib:
+mqtt:
   address: tcp://127.0.0.1:1883
   username: test
   password: hahaha
 clients:
-  - name: baidu-bos
+  - name: aws-s3-test
     region: us-east-2
     ak: XXXXXXXXXXXXXXXXXXXXXXXX
     sk: XXXXXXXXXXXXXXXXXXXXXXXX
@@ -14,21 +14,19 @@ clients:
     pool:
       worker: 1000
       idletime: 30s
-    bucket: bos-remote-demo
+    bucket: s3-demo
     temppath: var/lib/baetyl/tmp
-    # max 1000g
     limit:
       enable: true
       data: 9g
       path: var/lib/baetyl/data/stats.yml
 rules:
   - hub:
-      clientid: remote-write-bos
+      clientid: remote-s3
       subscriptions:
-        # hub topic
         - topic: t
     client:
-      name: baidu-bos
+      name: aws-s3-test
 logger:
   path: var/log/baetyl/service.log
   level: "debug"
