--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,32 @@
 *.dll
 *.so
 *.dylib
-/**/coverage.out
-/**/coverage.html
+/.idea
+/.vscode
+/**/coverage.*
 /**/.DS_Store
-/output
-
+/**/*.log
+/vendor
 # Test binary, build with `go test -c`
 *.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+# Other
+*~
+*.swp
+*.a
+*.jar
+*.iml
+/.idea
+/.vscode
+/output*
+/**/*.zip
+/**/.DS_Store
+/**/*.db
+/**/*.db.lock
+/**/*debug.test
+/**/debug
+/**/*.log
+baetyl-rule
