--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -13,10 +13,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v1
       - name: Run unittest
-        run: make test
+        run: cd baetyl-remote-object && make test
       - name: Upload coverage to Codecov  
         uses: codecov/codecov-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./coverage.txt
+          file: ./baetyl-remote-object/coverage.txt
           fail_ci_if_error: true
