--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -13,4 +13,4 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v1
       - name: Run unittest
-        run: make test
+        run: cd baetyl-remote-object && make test
