--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ go:
 
 install: true
 script:
-  - echo "baetyl-adapter build begin"
+  - echo "baetyl-remote build begin"
   - env GO111MODULE=on GOPROXY=https://goproxy.io make
-  - echo "baetyl-adapter build end"
+  - echo "baetyl-remote build end"
   - echo "baetyl uint test begin"
   - env GO111MODULE=on GOPROXY=https://goproxy.io make test GOTESTFLAG=--race
   - echo "baetyl unit test end"
